[DROOLS-7066] Fix sonar code-smells